@startuml TablaSimbolos
skinparam ClassAttributeIconSize 0
hide circle

class TablaSimbolos {
    - List<Contexto> ctx
    + buscarLocal () : ID
    + buscar() : ID
    + agregar(ID)
    + agregarContexto()
    + borrarContexto()
}

class Contexto {
    - Dict<String, ID> simbolos
}


abstract class ID <<abstract>> {
    - String nombre
    - Enum tdato 
    - Boolean inicializado
    - Boolean accedido
}

class Funcion {
    - List<ID> args
}

class Variable {

}

TablaSimbolos -> Contexto
Contexto -> ID
ID <|-- Funcion
ID <|-- Variable

@enduml